--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,68 @@
 
+@Article{	  crnic2025conjunctive,
+  author	= {Crni{\v c}, Luka},
+  journal	= {Journal of Semantics},
+  pages		= {ffaf012},
+  title		= {Conjunctive Strengthening More Broadly},
+  year		= {2025}
+}
+
+@InBook{	  cardinaletti2017quantified,
+  author	= {Cardinaletti, Anna and Giusti, Giuliana},
+  booktitle	= {{\c c}},
+  editor	= {Everaert, Martin and Riemsdijk, Henk C.},
+  pages		= {1-42},
+  publisher	= {Wiley},
+  title		= {Quantified Expressions and Quantitative Clitics},
+  year		= {2017}
+}
+
+@InBook{	  tanase-dogaru2017partitive,
+  author	= {T{\u a}nase‐Dogaru, Mihaela},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and Riemsdijk, Henk C.},
+  pages		= {1-30},
+  publisher	= {Wiley},
+  title		= {Partitive Constructions},
+  year		= {2017}
+}
+
+@InBook{	  csirmaz2017measurea,
+  author	= {Csirmaz, Anik{\'o} and Stavrou, Melita},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  editor	= {Everaert, Martin and Riemsdijk, Henk C.},
+  pages		= {1-66},
+  publisher	= {Wiley},
+  title		= {Measure Phrases and Semi-Lexical Nouns},
+  year		= {2017}
+}
+
+@Article{	  lim2025small,
+  author	= {Lim, Jun Jie},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {8},
+  title		= {Small Nominalized Clauses in Khalkha Mongolian:
+		  Asymmetries in Mixed Extended Projections},
+  volume	= {44},
+  year		= {2025}
+}
+
+@Article{	  snyder2025numbers,
+  author	= {Snyder, Eric},
+  journal	= {Linguistics and Philosophy},
+  title		= {Numbers as Kinds: Towards an Improved Explanation of
+		  Number Word Polysemy},
+  year		= {2025}
+}
+
+@Book{		  peterson2025how,
+  author	= {Peterson, Jessie},
+  publisher	= {Cambridge University Press},
+  title		= {How to Create a Language: The Conlang Guide},
+  year		= {2025}
+}
+
 @Book{		  giusti2020language,
   address	= {Erscheinungsort nicht ermittelbar},
   editor	= {Giusti, Giuliana and Iann{\`a}ccaro, Gabriele},
