--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,78 @@
 
+@Article{	  zimmermann2026african,
+  author	= {Zimmermann, Malte},
+  journal	= {Language and Linguistics Compass},
+  number	= {1},
+  title		= {African Lambdas {I}: Formal Semantics of African
+		  Languages---The Nominal Domain},
+  volume	= {20},
+  year		= {2026}
+}
+
+@Article{	  hu2025circuits,
+  author	= {Hu, Michael Y. and Petty, Jackson and Shi, Chuan and
+		  Merrill, William and Linzen, Tal},
+  number	= {arXiv:2502.19249},
+  title		= {Between Circuits and Chomsky: Pre-pretraining on Formal
+		  Languages Imparts Linguistic Biases},
+  year		= {2025}
+}
+
+@Article{	  flesch2024resilience,
+  author	= {Flesch, Marie and Abbou, Julie and Tremblay, Mireille and
+		  Burnett, Heather},
+  journal	= {SHS Web of Conferences},
+  pages		= {13003},
+  title		= {La r{\'e}silience du ne en fran{\c c}ais contemporain :
+		  {\'e}tude d'un marqueur stylistique {\`a} Paris,
+		  Montr{\'e}al et Marseille},
+  volume	= {191},
+  year		= {2024}
+}
+
+@InBook{	  gibson2001dependency,
+  author	= {Gibson, Edward},
+  editor	= {Marantz, Alec P. and Miyashita, Yasushi and O'Neil,
+		  Wayne},
+  pages		= {95-126},
+  publisher	= {The MIT Press},
+  title		= {The Dependency Locality Theory: A Distance-Based Theory of
+		  Linguistic Complexity Image, Language, Brain},
+  year		= {2001}
+}
+
+@Article{	  bach1986crossed,
+  author	= {Bach, Emmon and Brown, Colin and Marslen-wilson, William},
+  journal	= {Language and Cognitive Processes},
+  number	= {4},
+  pages		= {249--262},
+  title		= {Crossed and Nested Dependencies in German and Dutch: A
+		  Psycholinguistic Study},
+  volume	= {1},
+  year		= {1986}
+}
+
+@Article{	  shieber1985evidence,
+  author	= {Shieber, Stuart M.},
+  journal	= {Linguistics and Philosophy},
+  number	= {3},
+  pages		= {333--343},
+  title		= {Evidence against the Context-Freeness of Natural
+		  Language},
+  volume	= {8},
+  year		= {1985}
+}
+
+@InBook{	  chomsky1959algebraic,
+  author	= {Chomsky, Noam and Sch{\"u}tzenberger, M.},
+  booktitle	= {26},
+  pages		= {118-161},
+  publisher	= {Elsevier},
+  title		= {The Algebraic Theory of Context-Free Languages Studies in
+		  Logic and the Foundations of Mathematics},
+  year		= {1959}
+}
+
 @Article{	  crnic2025conjunctive,
   author	= {Crni{\v c}, Luka},
   journal	= {Journal of Semantics},
@@ -328,13 +402,13 @@
 @InCollection{	  abbou2025devenir,
   address	= {Montr\'eal},
   author	= {Abbou, Julie and Burnett, Heather},
-  booktitle	= {{(Re)donner la parole aux corpus montr\'ealais: regards
-		  r\'etrospectif et prospectif}},
+  booktitle	= {{(Re)donner la parole aux corpus montr{\'e}alais: regards
+		  r{\'e}trospectif et prospectif}},
   editor	= {Blondeau, H{\'e}l{\`e}ne and Laforest, Marty and Remysen,
 		  Wim},
   publisher	= {Les Presses de l'Universit\'e de Montr\'eal},
-  title		= {{Devenir f\'eministe et queer \`a Paris et Montr\'eal:
-		  R\'ecits de vie dans le corpus CaF\'e}},
+  title		= {{Devenir f{\'e}ministe et queer {\`a} Paris et
+		  Montr{\'e}al: R{\'e}cits de vie dans le corpus CaF{\'e}}},
   year		= {2025}
 }
 
