--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@Book{		  dunn2025syntactic,
+  author	= {Dunn, Jonathan},
+  publisher	= {Cambridge University Press},
+  title		= {Syntactic Variation from Individuals to Populations:
+		  Language as a Complex System},
+  year		= {2025}
+}
+
+@Book{		  robson2025aesthetic,
+  author	= {Robson, Jon},
+  publisher	= {Cambridge University Press},
+  title		= {Aesthetic Knowledge},
+  year		= {2025}
+}
+
 @Article{	  zimmermann2026african,
   author	= {Zimmermann, Malte},
   journal	= {Language and Linguistics Compass},
