--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  rouillard2026maximal,
+  author	= {Rouillard, Vincent},
+  journal	= {Linguistics and Philosophy},
+  title		= {Maximal Informativity Accounts for the Distribution of
+		  Temporal In-Adverbials},
+  year		= {2026}
+}
+
+@Article{	  horn1985metalinguistica,
+  author	= {Horn, Laurence R.},
+  journal	= {Language},
+  number	= {1},
+  pages		= {121--174},
+  title		= {Metalinguistic Negation and Pragmatic Ambiguity},
+  volume	= {61},
+  year		= {1985}
+}
+
+@Article{	  zimmermann2026africana,
+  author	= {Zimmermann, Malte},
+  journal	= {Language and Linguistics Compass},
+  number	= {1},
+  pages		= {e70024},
+  title		= {African Lambdas {II}: Formal Semantics of African
+		  Languages---The Verbal and Clausal Domain},
+  volume	= {20},
+  year		= {2026}
+}
+
 @Book{		  dunn2025syntactic,
   author	= {Dunn, Jonathan},
   publisher	= {Cambridge University Press},
