--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Book{		  adger2025mereological,
+  address	= {Cambridge, MA},
+  author	= {Adger, David},
+  publisher	= {The MIT Press, Massachusetts Institute of Technology},
+  title		= {Mereological Syntax: Phrase Structure, Cyclicity, and
+		  Islands},
+  year		= {2025}
+}
+
+@Article{	  almeida-silva2025birth,
+  author	= {Almeida-Silva, Anderson and Nitschke, Remo and Valls
+		  Yoshida, Fernando and N{\'o}brega, Vitor and Miyagawa,
+		  Shigeru},
+  journal	= {Cognitive Science},
+  number	= {12},
+  pages		= {e70159},
+  title		= {Birth of a Language in the Backlands of Brazil},
+  volume	= {49},
+  year		= {2025}
+}
+
 @Article{	  rouillard2026maximal,
   author	= {Rouillard, Vincent},
   journal	= {Linguistics and Philosophy},
