--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,80 @@
 
+@Article{	  hewett2026verbal,
+  author	= {Hewett, Matthew},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {197--215},
+  title		= {Verbal Templates Can Influence L-Selection in Semitic},
+  volume	= {57},
+  year		= {2026}
+}
+
+@Article{	  alshamari2026topic,
+  author	= {Alshamari, Murdhy and Holmberg, Anders},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {49--86},
+  title		= {Topic Particles, Agreement, and Movement in an Arabic
+		  Dialect},
+  volume	= {57},
+  year		= {2026}
+}
+
+@Article{	  koring2026realizing,
+  author	= {Koring, Loes and Reuland, Eric and Sangers, Nina and
+		  Wexler, Kenneth},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {87--111},
+  title		= {On Realizing External Arguments: A Syntactic and
+		  Implicature Theory of the Disjointness Effect for Passives
+		  in Adult and Child Grammar},
+  volume	= {57},
+  year		= {2026}
+}
+
+@Article{	  steedman2026internal,
+  author	= {Steedman, Mark},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {113--171},
+  title		= {On Internal Merge},
+  volume	= {57},
+  year		= {2026}
+}
+
+@Article{	  ostrove2026obligatorily,
+  author	= {Ostrove, Jason},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--48},
+  title		= {Obligatorily Overt {PRO} in San Mart{\'i}n Peras Mixtec},
+  volume	= {57},
+  year		= {2026}
+}
+
+@Article{	  messick2026eraising,
+  author	= {Messick, Troy and Har\dharson, G\'isli R{\'u}nar},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {173--195},
+  title		= {E-Raising Reconsidered: Constituency, Coordination, and
+		  Case-Matching Reciprocals},
+  volume	= {57},
+  year		= {2026}
+}
+
+@Article{	  storme2026method,
+  author	= {Storme, Benjamin},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {216--228},
+  title		= {A Method to Evaluate Systemic Constraints in Probabilistic
+		  Grammars},
+  volume	= {57},
+  year		= {2026}
+}
+
 @Book{		  adger2025mereological,
   address	= {Cambridge, MA},
   author	= {Adger, David},
