--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,61 @@
 
+@Book{		  ruizdeaguirre2026novedades,
+  author	= {Ruiz de Aguirre, Alfonso and Rodr{\'i}guez P{\'e}rez,
+		  Silvia},
+  publisher	= {Autoedici\'on Amaz\'on},
+  title		= {Novedades {PAU} 2026 Madrid. Lengua Castellana y
+		  Literatura},
+  year		= {2026}
+}
+
+@Book{		  herrera2024variacion,
+  address	= {Barcelona},
+  editor	= {Herrera, Francisco and Soler Montes, Carlos},
+  publisher	= {Difusi\'on},
+  title		= {Variaci{\'o}n ling{\"u}{\'i}stica en el aula de
+		  espa{\~n}ol: la diversidad de la lengua},
+  year		= {2024}
+}
+
+@Article{	  bosque2023aspectos,
+  author	= {Bosque, Ignacio},
+  journal	= {Asterisco: Revista de ling\''u\'istica espa\~nola},
+  pages		= {7--29},
+  title		= {Aspectos did{\'a}cticos de la variaci{\'o}n gramatical},
+  volume	= {1},
+  year		= {2023}
+}
+
+@Book{		  herrera2018ensenar,
+  address	= {Barcelone},
+  editor	= {Herrera, Francisco and Sans, Neus},
+  publisher	= {Difusi\'on},
+  title		= {Ense{\~n}ar gram{\'a}tica en el aula de espa{\~n}ol:
+		  nuevas perspectivas y propuestas},
+  year		= {2018}
+}
+
+@Article{	  dekydtspotter2014second,
+  author	= {Dekydtspotter, Laurent and Renaud, Claire},
+  journal	= {Linguistic Approaches to Bilingualism},
+  number	= {2},
+  pages		= {131--165},
+  title		= {On Second Language Processing and Grammatical Development.
+		  The Parser in Second Language Acquisition},
+  volume	= {4},
+  year		= {2014}
+}
+
+@Article{	  mclaughlin1990restructuring,
+  author	= {Mclaughlin, Barry},
+  journal	= {Applied Linguistics},
+  number	= {2},
+  pages		= {113--128},
+  title		= {Restructuring},
+  volume	= {11},
+  year		= {1990}
+}
+
 @Article{	  hewett2026verbal,
   author	= {Hewett, Matthew},
   journal	= {Linguistic Inquiry},
