--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,58 @@
 
+@Article{	  mendivil-giro2026limits,
+  author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e} Luis},
+  journal	= {Biolinguistics},
+  pages		= {1--7},
+  title		= {On the Limits of Functionalism: A Reply to Bierl (2025)},
+  volume	= {20},
+  year		= {2026}
+}
+
+@Book{		  jackendoff2025parenthetical,
+  address	= {New York},
+  author	= {Jackendoff, Ray},
+  publisher	= {Oxford University Press},
+  title		= {Parenthetical Constructions in the Parallel Architecture},
+  year		= {2025}
+}
+
+@Book{		  punske2024morphology,
+  address	= {Hoboken, New Jersey},
+  author	= {Punske, Jeffrey},
+  publisher	= {Wiley Blackwell},
+  title		= {Morphology: A Distributed Morphology Introduction},
+  year		= {2024}
+}
+
+@Article{	  mendezcarpio2021tecnopedagogia,
+  author	= {M{\'e}ndez Carpio, C{\'e}sar Ra{\'u}l and Pozo Cabrera,
+		  Enrique Eugenio},
+  journal	= {Revista Scientific},
+  number	= {22},
+  pages		= {248--269},
+  title		= {La Tecnopedagog{\'i}a: Enlace Crucial Entre
+		  Metodolog{\'i}as Activas y Herramientas Digitales En La
+		  Educaci{\'o}n H{\'i}brida Universitaria},
+  volume	= {6},
+  year		= {2021}
+}
+
+@Book{		  julien2023syntactic,
+  address	= {Oxford},
+  author	= {Julien, Marit},
+  publisher	= {Oxford University Press},
+  title		= {Syntactic Heads and Word Formation},
+  year		= {2023}
+}
+
+@Book{		  hornstein1984logic,
+  author	= {Hornstein, Norbert},
+  publisher	= {The MIT Press},
+  title		= {Logic as Grammar: An Approach to Meaning in Natural
+		  Language},
+  year		= {1984}
+}
+
 @Book{		  ruizdeaguirre2026novedades,
   author	= {Ruiz de Aguirre, Alfonso and Rodr{\'i}guez P{\'e}rez,
 		  Silvia},
