--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,89 @@
 
+@Article{	  bale2026natural,
+  author	= {Bale, Alan and Schwarz, Bernhard},
+  journal	= {Linguistics and Philosophy},
+  title		= {Natural Language and External Conventions: Re-Examining
+		  Per},
+  year		= {2026}
+}
+
+@Article{	  port2019topological,
+  author	= {Port, Alexander and Karidi, Taelin and Marcolli, Matilde},
+  number	= {arXiv:1903.05181},
+  title		= {Topological Analysis of Syntactic Structures},
+  year		= {2019}
+}
+
+@InProceedings{	  uriagereka2026algebraic,
+  address	= {Cham},
+  author	= {Uriagereka, Juan},
+  editor	= {Cavar, Damir and Aggarwal, Vaneet and Busemeyer, Jerome
+		  and Chen, Samuel Yen-Chi},
+  pages		= {204-233},
+  publisher	= {Springer Nature Switzerland},
+  title		= {Toward an Algebraic Implementation of a Language Faculty
+		  Quantum {AI} and {NLP}},
+  year		= {2026}
+}
+
+@Article{	  gakkhar2024syntactic,
+  author	= {Gakkhar, Sitanshu and Marcolli, Matilde},
+  journal	= {Mathematics in Computer Science},
+  number	= {1},
+  pages		= {4},
+  title		= {Syntactic Structures and the General Markov Models},
+  volume	= {18},
+  year		= {2024}
+}
+
+@Book{		  marcolli2020lumen,
+  address	= {Cambridge, Massachusetts London, England},
+  author	= {Marcolli, Matilde},
+  publisher	= {The MIT Press},
+  title		= {Lumen Naturae: Visions of the Abstract in Art and
+		  Mathematics},
+  year		= {2020}
+}
+
+@Article{	  manin2016semantic,
+  author	= {Manin, Yuri I. and Marcolli, Matilde},
+  journal	= {Mathematics in Computer Science},
+  number	= {4},
+  pages		= {459--477},
+  title		= {Semantic Spaces},
+  volume	= {10},
+  year		= {2016}
+}
+
+@Article{	  welchance2026perception,
+  author	= {Welchance, Evan},
+  journal	= {Synthese},
+  number	= {2},
+  pages		= {58},
+  title		= {Perception and Extraordinary Objects},
+  volume	= {207},
+  year		= {2026}
+}
+
+@Article{	  marks2026nonideal,
+  author	= {Marks, James},
+  journal	= {Synthese},
+  number	= {2},
+  pages		= {56},
+  title		= {Nonideal Theory and a Logic of Abduction},
+  volume	= {207},
+  year		= {2026}
+}
+
+@Article{	  cerrudoaguilar2019discourse,
+  author	= {Cerrudo Aguilar, Alba},
+  journal	= {Catalan journal of linguistics},
+  number	= {esp},
+  pages		= {203--227},
+  title		= {Discourse Phenomena as a Window to the Interfaces},
+  year		= {2019}
+}
+
 @Article{	  mendivil-giro2026limits,
   author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e} Luis},
   journal	= {Biolinguistics},
