--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  longobardi2017principles,
+  author	= {Longobardi, Giuseppe},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  title		= {Principles, Parameters, and Schemata A Radically
+		  Underspecified {UG}},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  carlsson2009topology,
+  author	= {Carlsson, Gunnar},
+  journal	= {Bulletin of the American Mathematical Society},
+  number	= {2},
+  pages		= {255--308},
+  title		= {Topology and Data},
+  volume	= {46},
+  year		= {2009}
+}
+
+@Article{	  longobardi2009evidence,
+  author	= {Longobardi, Giuseppe and Guardiano, Cristina},
+  journal	= {Lingua The Forests behind the Trees},
+  number	= {11},
+  pages		= {1679--1706},
+  title		= {Evidence for Syntax as a Signal of Historical
+		  Relatedness},
+  volume	= {119},
+  year		= {2009}
+}
+
 @Article{	  bale2026natural,
   author	= {Bale, Alan and Schwarz, Bernhard},
   journal	= {Linguistics and Philosophy},
