--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,203 @@
 
+@Article{	  heck2009certaina,
+  author	= {Heck, Fabian},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {75--111},
+  title		= {On {{Certain Properties}} of {{Pied-Piping}}},
+  volume	= {40},
+  year		= {2009},
+  doi		= {10.1162/ling.2009.40.1.75}
+}
+
+@Article{	  ahn2022indirectly,
+  author	= {Ahn, Dorothy},
+  journal	= {Linguistics and Philosophy},
+  number	= {6},
+  pages		= {1345--1393},
+  title		= {Indirectly Direct: An Account of Demonstratives and
+		  Pointing},
+  volume	= {45},
+  year		= {2022}
+}
+
+@Article{	  jenks2022indexed,
+  author	= {Jenks, Peter and Konate, Rassidatou},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Indexed Definiteness},
+  volume	= {7},
+  year		= {2022}
+}
+
+@Article{	  cardona2026voice,
+  author	= {Cardona, Leonardo Russo},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {2},
+  pages		= {1--42},
+  title		= {Voice and Functional Structure in Italo-Romance
+		  Tough-Constructions},
+  volume	= {12},
+  year		= {2026}
+}
+
+@Article{	  rendl2026french,
+  author	= {Rendl, Liv and \noopsortswartde Swart, Henri{\'e}tte},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {2},
+  pages		= {1--30},
+  title		= {French Neo-Pronouns: Towards a Gender Inclusive Grammar of
+		  Reference and Agreement},
+  volume	= {12},
+  year		= {2026}
+}
+
+@Article{	  bombi2026noun,
+  author	= {Bombi, Carla},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {2},
+  pages		= {1--31},
+  title		= {Before and after the Noun: Semantics for Spanish
+		  Demonstratives},
+  volume	= {12},
+  year		= {2026}
+}
+
+@Article{	  siva2017syntactic,
+  author	= {Siva, Karthik and Tao, Jim and Marcolli, Matilde},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {559--615},
+  title		= {Syntactic Parameters And Spin Glass Models Of Language
+		  Change},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  taraldsen2017syntactic,
+  author	= {Taraldsen, Tarald},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {367--390},
+  title		= {Syntactic Parameters And (Apparent) Cross-Linguistic
+		  Variation In The Lexicon},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  baker2017structural,
+  author	= {Baker, Mark},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {193--240},
+  title		= {Structural Case: A Realm of Syntactic Microparameters},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  borer2017preface,
+  author	= {Borer, Hagit},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {241--254},
+  title		= {Preface to {I}-Subjects},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  sakas2017parameter,
+  author	= {Sakas, William Gregory and Yang, Charles D. and Berwick,
+		  Robert C.},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {391--408},
+  title		= {Parameter Setting Is Feasible},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  rizzi2017format,
+  author	= {Rizzi, Luigi},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  title		= {On the Format and Locus of Parameters: The Role of
+		  Morphosyntactic Features},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  chomsky2017notes,
+  author	= {Chomsky, Noam},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {475--480},
+  title		= {Notes On Parameters},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  duguine2017linguistic,
+  author	= {Duguine, Maia and Irurtzun, Aritz and Boeckx, Cedric},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {445--474},
+  title		= {Linguistic Diversity And Granularity: Two Case-Studies
+		  Against Parametric Approaches},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  epstein2017linguistic,
+  author	= {Epstein, Samuel David and Obata, Miki and Seely, T.
+		  Daniel},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {481--516},
+  title		= {Is Linguistic Variation Entirely Linguistic?},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  karimi2017introduction,
+  author	= {Karimi, Simin and Piattelli-Palmarini, Massimo},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  title		= {Introduction to the Special Issue on Parameters},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  borer2017isubjects,
+  author	= {Borer, Hagit},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {255--308},
+  title		= {{I}-Subjects},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  lightfoot2017discovering,
+  author	= {Lightfoot, David},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {409--444},
+  title		= {Discovering New Variable Properties Without Parameters},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  cinque2017microparametric,
+  author	= {Cinque, Gugliemo},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {309--366},
+  title		= {A Microparametric Approach To The Head-Initial/Head-Final
+		  Parameter},
+  volume	= {41},
+  year		= {2017}
+}
+
 @Article{	  longobardi2017principles,
   author	= {Longobardi, Giuseppe},
   journal	= {Linguistic Analysis},
