--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  cumming2026tense,
+  author	= {Cumming, Samuel},
+  journal	= {Linguistics and Philosophy},
+  title		= {Tense and Evidence},
+  year		= {2026},
+  doi		= {10.1007/s10988-025-09452-w}
+}
+
+@PhDThesis{	  hanink2018structural,
+  author	= {Hanink, Emily},
+  school	= {University of Chicago},
+  title		= {Structural {{Sources}} of {{Anaphora}} and {{Sameness}}},
+  year		= {2018},
+  doi		= {10.6082/56vg-vj23}
+}
+
 @Article{	  heck2009certaina,
   author	= {Heck, Fabian},
   journal	= {Linguistic Inquiry},
