--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,423 @@
 
+@Book{		  angel1989how,
+  address	= {Boulder, Colo},
+  author	= {Angel, Leonard},
+  publisher	= {Westview Press},
+  title		= {How to Build a Conscious Machine},
+  year		= {1989}
+}
+
+@Article{	  li1998argument,
+  author	= {Li, Yen-hui Audrey},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {693--702},
+  title		= {Argument Determiner Phrases and Number Phrases},
+  volume	= {29},
+  year		= {1998}
+}
+
+@Article{	  brody1993ththeorya,
+  author	= {Brody, Michael},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--23},
+  title		= {\texttheta -{{Theory}} and {{Arguments}}},
+  volume	= {24},
+  year		= {1993}
+}
+
+@Article{	  brody1998projection,
+  author	= {Brody, Michael},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {367--398},
+  title		= {Projection and {{Phrase Structure}}},
+  volume	= {29},
+  year		= {1998},
+  doi		= {10.1162/002438998553798}
+}
+
+@Article{	  brody2000mirror,
+  author	= {Brody, Michael},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {29--56},
+  title		= {Mirror {{Theory}}: {{Syntactic Representation}} in
+		  {{Perfect Syntax}}},
+  volume	= {31},
+  year		= {2000},
+  doi		= {10.1162/002438900554280}
+}
+
+@Article{	  cartner2026subject,
+  author	= {Cartner, Mandy and Kogan, Matthew and Webster, Nikolas and
+		  Wagers, Matthew and Sichel, Ivy},
+  journal	= {Cognition},
+  pages		= {106467},
+  title		= {Subject Islands Do Not Reduce to Construction-Specific
+		  Discourse Function},
+  volume	= {271},
+  year		= {2026},
+  doi		= {10.1016/j.cognition.2026.106467}
+}
+
+@Article{	  collins2020conjoining,
+  author	= {Collins, John},
+  journal	= {Mind \& Language},
+  number	= {2},
+  pages		= {224--236},
+  title		= {Conjoining Meanings without Losing Our Heads},
+  volume	= {35},
+  year		= {2020},
+  doi		= {10.1111/mila.12268}
+}
+
+@InCollection{	  eguren1999pronombres,
+  address	= {Madrid},
+  author	= {Eguren, Luis},
+  booktitle	= {{Gram\'atica descriptiva de la lengua espa\~nola}},
+  editor	= {Bosque Mu{\~n}oz, Ignacio and Demonte, Violeta},
+  pages		= {930--972},
+  publisher	= {Espasa},
+  series	= {{Colecci\'on Nebrija y bello}},
+  title		= {{Pronombres y adverbios demostrativos. Las relaciones
+		  de\'icticas}},
+  volume	= {1},
+  year		= {1999}
+}
+
+@Book{		  kayne1994antisymmetry,
+  address	= {Cambridge, Mass.},
+  author	= {Kayne, Richard S.},
+  edition	= {3. print},
+  number	= {25},
+  series	= {Linguistic Inquiry Monographs},
+  title		= {The Antisymmetry of Syntax},
+  year		= {1994}
+}
+
+@Article{	  neeleman2002configurational,
+  author	= {Neeleman, Ad and Koot, Hans Van De},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {529--574},
+  title		= {The {{Configurational Matrix}}},
+  volume	= {33},
+  year		= {2002},
+  doi		= {10.1162/002438902762731763}
+}
+
+@Article{	  perezsaldanya2005cuesta,
+  author	= {P{\'e}rez Saldanya, Manuel and Rigau, Gemma},
+  journal	= {Journal of Portuguese Linguistics},
+  number	= {1},
+  publisher	= {Open Library of Humanities},
+  title		= {Cuesta Arriba e Por Llano: {{The}} Development of
+		  ``Postpositions'' in {{Spanish}} and {{Catalan}}},
+  volume	= {4},
+  year		= {2005},
+  doi		= {10.5334/jpl.167}
+}
+
+@InCollection{	  perezsaldanya2011cuello,
+  author	= {P{\'e}rez Saldanya, Manuel and Rigau Oliver, Gemma and
+		  Sol{\`a} Cortassa, Joan},
+  booktitle	= {{60 problemas de gram\'atica: dedicados a Ignacio
+		  Bosque.}},
+  pages		= {163--169},
+  publisher	= {Ediciones Akal},
+  title		= {{"Cuello abajo" y "boca arriba": \textquestiondown dos
+		  construcciones sint\'acticamente distintas?}},
+  year		= {2011}
+}
+
+@InCollection{	  phillips2021theories,
+  author	= {Phillips, Colin and Gaston, Phoebe and Huang, Nick and
+		  Muller, Hanna},
+  booktitle	= {The {{Cambridge Handbook}} of {{Experimental Syntax}}},
+  edition	= {1},
+  editor	= {Goodall, Grant},
+  pages		= {587--616},
+  publisher	= {Cambridge University Press},
+  title		= {Theories {{All}} the {{Way Down}}: {{Remarks}} on
+		  ``{{Theoretical}}'' and ``{{Experimental}}''
+		  {{Linguistics}}},
+  year		= {2021},
+  doi		= {10.1017/9781108569620.023}
+}
+
+@Article{	  rigau2007els,
+  author	= {Rigau, Gemma and P{\'e}rez Saldanya, Manuel},
+  journal	= {Estudis Rom\`anics},
+  pages		= {61--80},
+  title		= {{Els Adverbis de lloc intransitius i la formaci\'o de
+		  construccions amb adverbis posposats}},
+  volume	= {29},
+  year		= {2007}
+}
+
+@Misc{		  woodruff2026accelerating,
+  author	= {Woodruff, David P. and {Cohen-Addad}, Vincent and Jain,
+		  Lalit and Mao, Jieming and Zuo, Song and Bateni,
+		  MohammadHossein and Branzei, Simina and Brenner, Michael P.
+		  and Chen, Lin and Feng, Ying and Fortnow, Lance and Fu,
+		  Gang and Guan, Ziyi and Hadizadeh, Zahra and Hajiaghayi,
+		  Mohammad T. and JafariRaviz, Mahdi and Javanmard, Adel and
+		  S, Karthik C. and Kawarabayashi, Ken-ichi and Kumar, Ravi
+		  and Lattanzi, Silvio and Lee, Euiwoong and Li, Yi and
+		  Panageas, Ioannis and Paparas, Dimitris and Przybocki,
+		  Benjamin and Subercaseaux, Bernardo and Svensson, Ola and
+		  Taherijam, Shayan and Wu, Xuan and Yogev, Eylon and
+		  Zadimoghaddam, Morteza and Zhou, Samson and Mirrokni,
+		  Vahab},
+  number	= {arXiv:2602.03837},
+  publisher	= {arXiv},
+  title		= {Accelerating {{Scientific Research}} with {{Gemini}}:
+		  {{Case Studies}} and {{Common Techniques}}},
+  year		= {2026},
+  doi		= {10.48550/arXiv.2602.03837}
+}
+
+@Article{	  beck2006intervention,
+  author	= {Beck, Sigrid and Kim, Shin-Sook},
+  journal	= {The Journal of Comparative Germanic Linguistics},
+  number	= {3},
+  pages		= {165--208},
+  title		= {Intervention {{Effects}} in {{Alternative Questions}}},
+  volume	= {9},
+  year		= {2006},
+  doi		= {10.1007/s10828-006-9005-2}
+}
+
+@Article{	  ciardelli2017composinga,
+  author	= {Ciardelli, Ivano and Roelofsen, Floris and Theiler,
+		  Nadine},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {1--36},
+  title		= {Composing Alternatives},
+  volume	= {40},
+  year		= {2017},
+  doi		= {10.1007/s10988-016-9195-2}
+}
+
+@Book{		  kotek2018composing,
+  address	= {Cambridge, Massachusetts},
+  author	= {Kotek, Hadas},
+  number	= {\#80},
+  publisher	= {The MIT Press},
+  series	= {Linguistic {{Inquiry Monographs}}},
+  title		= {Composing Questions},
+  year		= {2018}
+}
+
+@InProceedings{	  kotek2023gendera,
+  address	= {New York, NY, USA},
+  author	= {Kotek, Hadas and Dockum, Rikker and Sun, David},
+  booktitle	= {Proceedings of {{The ACM Collective Intelligence
+		  Conference}}},
+  pages		= {12--24},
+  publisher	= {Association for Computing Machinery},
+  series	= {{{CI}} '23},
+  title		= {Gender Bias and Stereotypes in {{Large Language Models}}},
+  year		= {2023},
+  doi		= {10.1145/3582269.3615599}
+}
+
+@Misc{		  kotek2024protected,
+  author	= {Kotek, Hadas and Sun, David Q. and Xiu, Zidi and Bowler,
+		  Margit and Klein, Christopher},
+  number	= {arXiv:2403.14727},
+  publisher	= {arXiv},
+  title		= {Protected Group Bias and Stereotypes in {{Large Language
+		  Models}}},
+  year		= {2024},
+  doi		= {10.48550/arXiv.2403.14727}
+}
+
+@Misc{		  li2025apple,
+  author	= {Li, Ethan and Larsen, Anders Boesen Lindbo and Zhang, Chen
+		  and Zhou, Xiyou and Qin, Jun and Yap, Dian Ang and
+		  Raghavan, Narendran and Chang, Xuankai and Bowler, Margit
+		  and Yildiz, Eray and Peebles, John and Coleman, Hannah
+		  Gillis and Ronchi, Matteo and Gray, Peter and You, Keen and
+		  {Spalvieri-Kruse}, Anthony and Pang, Ruoming and Li, Reed
+		  and Yang, Yuli and Soroush, Emad and Lu, Zhiyun and Xiao,
+		  Crystal and Situ, Rong and Huffaker, Jordan and Griffiths,
+		  David and Ahmed, Zaid and Zhang, Peng and Parilla, Daniel
+		  and Liberman, Asaf and Mallalieu, Jennifer and Mazaheri,
+		  Parsa and Chen, Qibin and Bilkhu, Manjot and Zhang, Aonan
+		  and Wang, Eric and Nelson, Dave and FitzMaurice, Michael
+		  and Voice, Thomas and Liu, Jeremy and Shaffer, Josh and
+		  Zhao, Shiwen and Yadla, Prasanth and Rasteh, Farzin and
+		  Guo, Pengsheng and Farooq, Arsalan and Snow, Jeremy and
+		  Murphy, Stephen and Lei, Tao and Cho, Minsik and Horrell,
+		  George and Dodge, Sam and Hislop, Lindsay and Singh, Sumeet
+		  and Dombrowski, Alex and Raghavan, Aiswarya and Sirovica,
+		  Sasha and Saebi, Mandana and Lao, Faye and Lam, Max and Lu,
+		  T. J. and Xu, Zhaoyang and Singh, Karanjeet and Kirchner,
+		  Marc and Mizrahi, David and Arora, Rajat and Zhang, Haotian
+		  and Mason, Henry and Zhou, Lawrence and Hua, Yi and Jain,
+		  Ankur and Bai, Felix and Astrauskas, Joseph and Weers,
+		  Floris and Gardner, Josh and Chiang, Mira and Zhang, Yi and
+		  Agrawal, Pulkit and Sun, Tony and Keunebroek, Quentin and
+		  Hopkins, Matthew and Wu, Bugu and Jia, Tao and Chen, Chen
+		  and Zhou, Xingyu and Wang, Nanzhu and Liu, Peng and Hou,
+		  Ruixuan and Rauch, Rene and Gao, Yuan and Dehghan, Afshin
+		  and Janke, Jonathan and Wang, Zirui and Chen, Cha and Ren,
+		  Xiaoyi and Nan, Feng and Elman, Josh and Yin, Dong and
+		  Goren, Yusuf and Lai, Jeff and Fei, Yiran and Evans, Syd
+		  and Yu, Muyang and Yin, Guoli and Qin, Yi and Feldman, Erin
+		  and Garg, Isha and Rajamani, Aparna and Vega, Karla and
+		  Cheng, Walker and Collins, T. J. and Han, Hans and Menacho,
+		  Raul Rea and Yeung, Simon and Lee, Sophy and Mutyala, Phani
+		  and Cheng, Ying-Chang and Gan, Zhe and Chu, Sprite and
+		  Lazarow, Justin and Pappalardo, Alessandro and Scozzafava,
+		  Federico and Lu, Jing and Daxberger, Erik and Duchesne,
+		  Laurent and Liu, Jen and G{\"u}era, David and Ligas,
+		  Stefano and Kery, Mary Beth and Ramerth, Brent and Sannino,
+		  Ciro and Eichner, Marcin and Huang, Haoshuo and Qian, Rui
+		  and {Schwarzer-Becker}, Moritz and Riazati, David and Gao,
+		  Mingfei and Wang, Bailin and Cackler, Jack and Lu, Yang and
+		  Niu, Ransen and Dennison, John and Klein, Guillaume and
+		  Bigham, Jeffrey and Gopinath, Deepak and Shiee, Navid and
+		  Botten, Darren and Tartavel, Guillaume and Garcia, Alex
+		  Guillen and Xu, Sam and Haladjian, Victoria M{\"o}nchJuan
+		  and Dou, Zi-Yi and Paulik, Matthias and Mendez, Adolfo
+		  Lopez and Li, Zhen and Chen, Hong-You and Jia, Chao and
+		  Doshi, Dhaval and Zhang, Zhengdong and Manjani, Raunak and
+		  Franklin, Aaron and Ren, Zhile and Chen, David and Peshko,
+		  Artsiom and Raghuram, Nandhitha and Hao, Hans and Shan,
+		  Jiulong and Nerella, Kavya and Tantawi, Ramsey and Kumar,
+		  Vivek and Wang, Saiwen and Wershing, Brycen and Dhingra,
+		  Bhuwan and Shah, Dhruti and Adaranijo, Ob and Zheng, Xin
+		  and Madsen, Tait and Kotek, Hadas and Liu, Chang and Xia,
+		  Yin and Li, Hanli and Jayaram, Suma and Sun, Yanchao and
+		  Fakhry, Ahmed and Saveris, Vasileios and Withers, Dustin
+		  and Li, Yanghao and Aygar, Alp and Teran, Andres Romero
+		  Mier Y. and Huang, Kaiwei and Lee, Mark and Li, Xiujun and
+		  Li, Yuhong and Johnson, Tyler and Tang, Jay and Cheng,
+		  Joseph Yitan and Peng, Futang and Walkingshaw, Andrew and
+		  Guibert, Lucas and Sharma, Abhishek and Shen, Cheng and
+		  Maj, Piotr and Tanaka, Yasutaka and Jhang, You-Cyuan and
+		  Ma, Vivian and Vehvilainen, Tommi and Zou, Kelvin and
+		  Nichols, Jeff and Lei, Matthew and Qiu, David and Qian,
+		  Yihao and Santhanam, Gokul and Wu, Wentao and Han, Yena and
+		  Moritz, Dominik and Fu, Haijing and Xu, Mingze and Rathod,
+		  Vivek and Liu, Jian and D'hauwe, Louis and Ba, Qin and Sun,
+		  Haitian and Yan, Haoran and Dufter, Philipp and Nguyen, Anh
+		  and Feng, Yihao and Wang, Emma and He, Keyu and Nair, Rahul
+		  and Shah, Sanskruti and Lu, Jiarui and Sonnenberg, Patrick
+		  and Warner, Jeremy and Li, Yuanzhi and Pan, Bowen and
+		  Zhong, Ziyi and Zhou, Joe and Davarnia, Sam and Saarikivi,
+		  Olli and Belousova, Irina and Burger, Rachel and Wu,
+		  Shang-Chen and Feng, Di and Straathof, Bas and Chou, James
+		  and Zhang, Yuanyang and Zuliani, Marco and Jimenez, Eduardo
+		  and Sundararajan, Abhishek and Du, Xianzhi and Lan, Chang
+		  and Shahdadpuri, Nilesh and Grasch, Peter and Sima, Sergiu
+		  and Newnham, Josh and Paidi, Varsha and Wang, Jianyu and
+		  Haag, Kaelen and Braunstein, Alex and Molinari, Daniele and
+		  Wei, Richard and Yang, Brenda and Lusskin, Nicholas and
+		  {Arreaza-Taylor}, Joanna and Cao, Meng and Seidl, Nicholas
+		  and Wang, Simon and Hu, Jiaming and Ma, Yiping and Li,
+		  Mengyu and Liu, Kieran and Su, Hang and Ravi, Sachin and
+		  Wang, Chong and Wang, Xin and Smith, Kevin and You, Haoxuan
+		  and Karimzadeh, Binazir and Li, Rui and Lei, Jinhao and
+		  Fang, Wei and Doane, Alec and Wiseman, Sam and Fernandez,
+		  Ismael and Li, Jane and Hansen, Andrew and Movellan, Javier
+		  and Neubauer, Christopher and Zhou, Hanzhi and Chaney,
+		  Chris and Kamaldin, Nazir and Wolf, Valentin and
+		  {Berm{\'u}dez-Medina}, Fernando and Pelemans, Joris and Fu,
+		  Peter and Xing, Howard and Kong, Xiang and Shan, Wayne and
+		  {Jacoby-Cooper}, Gabriel and Shen, Dongcai and Gunter, Tom
+		  and Seguin, Guillaume and Shi, Fangping and Li, Shiyu and
+		  Xu, Yang and Kamal, Areeba and Masi, Dan and Guha,
+		  Saptarshi and Zhu, Qi and Thibodeau, Jenna and Zhang,
+		  Changyuan and Callahan, Rebecca and Maalouf, Charles and
+		  Tsao, Wilson and Li, Boyue and Cao, Qingqing and Sabo,
+		  Naomy and Leong, Cheng and Wang, Yi and Anupama, Anupama
+		  Mann and Reed, Colorado and Jung, Kenneth and Chen, Zhifeng
+		  and Moorthy, Mohana Prasad Sathya and He, Yifei and
+		  Hornberger, Erik and Krishna, Devi and Tong, Senyu and
+		  Michael and Lee and Haldimann, David and Zhao, Yang and
+		  Zhang, Bowen and Gao, Chang and Bartels, Chris and Rao,
+		  Sushma and Tran, Nathalie and Lehnerer, Simon and Giang, Co
+		  and Dong, Patrick and Pan, Junting and Wang, Biyao and Li,
+		  Dongxu and Farajtabar, Mehrdad and Hwang, Dongseong and
+		  Duanmu, Grace and Verma, Eshan and Reddy, Sujeeth and Shan,
+		  Qi and Gao, Hongbin and Du, Nan and Sridhar, Pragnya and
+		  Huang, Forrest and Wang, Yingbo and Bhendawade, Nikhil and
+		  Zhu, Diane and Aitharaju, Sai and Hohman, Fred and
+		  Gardiner, Lauren and Chiu, Chung-Cheng and Yang, Yinfei and
+		  Kokmen, Alper and Chu, Frank and Ye, Ke and Elgin, Kaan and
+		  Levy, Oron and Park, John and Zhang, Donald and Schoop,
+		  Eldon and Wenzel, Nina and Booker, Michael and Kim, Hyunjik
+		  and Erdenebileg, Chinguun and Dun, Nan and Yang, Eric Liang
+		  and Chhatrapati, Priyal and Mahtani, Vishaal and Gang,
+		  Haiming and Chia, Kohen and Seshadri, Deepa and Yu, Donghan
+		  and Meng, Yan and Peterson, Kelsey and Yang, Zhen and Wang,
+		  Yongqiang and Peng, Carina and Kang, Doug and Agarwal,
+		  Anuva and Antony, Albert and Tebar, Juan Lao and Jose,
+		  Albin Madappally and Poston, Regan and Wang, Andy De and
+		  Casamayor, Gerard and Amirloo, Elmira and Yao, Violet and
+		  Kryscinski, Wojciech and Duan, Kun and L, Lezhi},
+  number	= {arXiv:2507.13575},
+  publisher	= {arXiv},
+  title		= {Apple {{Intelligence Foundation Language Models}}: {{Tech
+		  Report}} 2025},
+  year		= {2025},
+  doi		= {10.48550/arXiv.2507.13575}
+}
+
+@Article{	  novel2009movement,
+  author	= {Novel, Marc and Romero, Maribel},
+  journal	= {Proceedings of Sinn und Bedeutung 14},
+  title		= {Movement, Variables, and {{Hamblin}} Alternatives},
+  year		= {2009}
+}
+
+@Misc{		  orgad2025llms,
+  author	= {Orgad, Hadas and Toker, Michael and Gekhman, Zorik and
+		  Reichart, Roi and Szpektor, Idan and Kotek, Hadas and
+		  Belinkov, Yonatan},
+  number	= {arXiv:2410.02707},
+  publisher	= {arXiv},
+  title		= {{{LLMs Know More Than They Show}}: {{On}} the {{Intrinsic
+		  Representation}} of {{LLM Hallucinations}}},
+  year		= {2025},
+  doi		= {10.48550/arXiv.2410.02707}
+}
+
+@PhDThesis{	  rooth1985association,
+  author	= {Rooth, Mats},
+  school	= {University of Massachusetts},
+  type		= {University of {{Massachusetts}}},
+  title		= {Association with {{Focus}}},
+  year		= {1985}
+}
+
+@Article{	  rooth1992theory,
+  author	= {Rooth, Mats},
+  journal	= {Natural Language Semantics},
+  number	= {1},
+  pages		= {75--116},
+  title		= {A Theory of Focus Interpretation},
+  volume	= {1},
+  year		= {1992},
+  doi		= {10.1007/BF02342617}
+}
+
+@Article{	  shan2004binding,
+  author	= {Shan, Chung-chieh},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {289--304},
+  title		= {Binding {{Alongside Hamblin Alternatives Calls}} for
+		  {{Variable-free Semantics}}},
+  year		= {2004},
+  doi		= {10.3765/salt.v14i0.2901}
+}
+
 @Article{	  cumming2026tense,
   author	= {Cumming, Samuel},
   journal	= {Linguistics and Philosophy},
